# serializer version: 1
# name: test_sensor[large].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'aws_s3',
        'test',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'AWS',
    'model': 'AWS S3',
    'model_id': None,
    'name': 'Bucket test',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[large][sensor.bucket_test_total_size_of_backups-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.bucket_test_total_size_of_backups',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total size of backups',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total size of backups',
    'platform': 'aws_s3',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backups_size',
    'unique_id': 'test_backups_size',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[large][sensor.bucket_test_total_size_of_backups-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'Bucket test Total size of backups',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bucket_test_total_size_of_backups',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_sensor[small].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'aws_s3',
        'test',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'AWS',
    'model': 'AWS S3',
    'model_id': None,
    'name': 'Bucket test',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[small][sensor.bucket_test_total_size_of_backups-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.bucket_test_total_size_of_backups',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total size of backups',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Total size of backups',
    'platform': 'aws_s3',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backups_size',
    'unique_id': 'test_backups_size',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[small][sensor.bucket_test_total_size_of_backups-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'Bucket test Total size of backups',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bucket_test_total_size_of_backups',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
